[SW-288] Fix overflow in clients carousel

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -543,7 +543,7 @@
         @apply max-w-[280px]
     }
 
-    @media (max-width: 1024px) {
+    @media (max-width: 1023px) {
         .clientsCarousel, .partnersCarousel  {
             overflow: visible !important;
         }
